# chatbox

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  capacitor.config.ts  docker-compose.yml  electron.vite.config.ts  package-lock.json  package.json  pnpm-lock.yaml  privacy.md  sass.config.js  vercel.json  webpack.renderer.config.ts
.ai/: README.md  claude.md  codex.md
.ai/agents/: claude.md  cursor-agent.md  tdd-agent.md
.ai/artifacts/: cb-509-proof-traces.ts
.ai/docs/: PENCIL_DESIGN_SYSTEM_STANDARD.md  PENCIL_UI_WORKFLOW.md  README.md  SINGLE_SOURCE_OF_TRUTH.md  UI_DESIGN_WORKFLOW.md  WORKSPACE_INDEX.md
.ai/scripts/: sync_pencil_docs.py
.ai/skills/: README.md  autonomous-ui-design.md  pencil-ui-design.md  tdd-workflow.md  (+1 more)
.claude/: CLAUDE.md
.codex_skill_cache/: project_type.json
.vercel/: project.json
chatbridge/: ARCHITECTURE.md  BOOTSTRAP.md  DEPLOYMENT.md  EVALS_AND_OBSERVABILITY.md  INTEGRATION_HARNESS.md  PARTNER_SDK.md  PRESEARCH.md  README.md  SERVICE_TOPOLOGY.md
docs/: testing.md
scripts/: deploy-vercel-production.sh  generate-route-tree.mjs  verify-vercel-deployment.sh  workspace-guard.mjs
src/: app.tsx  electron.vite.config.test.ts  index.html  index.scss  renderer.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/settings/: mod.rs  setting.rs
src-tauri/src/synchronization/: dropbox.rs  error.rs  mod.rs  sync.rs  sync_lock.rs  sync_plan.rs
src-tauri/src/types/: settings.rs  sync.rs
(+4835 files in other folders)
