[package]
name = "cha"
version = "0.1.0"
description = "A chat-app client for many LLM model provider"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cha_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
uuid = { version = "0.8", features = ["v4", "serde"] }
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.18"
sha2 = "0.10"
hex = "0.4.3"
anyhow = "1.0.96"
